--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "react-electron-boilerplate-tailwind",
+  "name": "app",
   "version": "0.1.0",
   "main": "main.js",
-  "description": "A simple boilerplate for creating electron application with react and tailwind css",
+  "homepage": "./",
   "private": true,
-  "author": "Gaurav Gupta",
-  "license": "ISC",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -17,7 +15,27 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.21.1",
+    "bson": "^4.3.0",
+    "dotenv": "^8.6.0",
+    "electron-updater": "^4.3.9",
+    "form-data": "^2.3.3",
+    "joi": "^17.4.0",
+    "js-base64": "^3.6.1",
+    "lodash": "^4.17.21",
+    "luxon": "^1.28.0",
+    "mkdirp": "^1.0.4",
+    "pluralize": "^7.0.0",
+    "react-hook-form": "^7.9.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-loading-skeleton": "^2.2.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "yargs": "^16.2.0"
   },
   "scripts": {
     "dev": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm:electron\"",
@@ -56,15 +74,18 @@
     "autoprefixer": "^10.4.2",
     "concurrently": "^5.2.0",
     "electron": "^17.1.0",
+    "jest": "^27.0.6",
+    "spectron": "^15.0.0",
+    "dotenv-webpack": "^7.0.3",
+    "electron-reload": "^1.5.0",
+    "electron-builder": "^22.11.7",
+    "electron-rebuild": "^3.2.7",
     "electron-devtools-installer": "^3.1.1",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
     "wait-on": "^5.1.0"
   },
-  "keywords": [
-    "raisehand"
-  ],
   "config": {
     "forge": {
       "packagerConfig": {
