--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@hookform/resolvers": "^2.6.0",
+    "@reduxjs/toolkit": "^1.6.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
@@ -33,6 +35,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
+    "react-toastify": "^7.0.4",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "yargs": "^16.2.0"
@@ -73,7 +76,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.52",
     "autoprefixer": "^10.4.2",
     "concurrently": "^5.2.0",
-    "electron": "^17.1.0",
+    "electron": "^13.1.5",
     "jest": "^27.0.6",
     "spectron": "^15.0.0",
     "dotenv-webpack": "^7.0.3",
