--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.6.0",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@szhsin/react-menu": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@hookform/resolvers": "^2.6.0",
-    "@reduxjs/toolkit": "^1.6.0",
-    "cross-env": "^7.0.3",
-    "electron-is-dev": "^1.2.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "object-treeify": "^2.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
+    "allotment": "^1.10.0",
     "axios": "^0.21.1",
     "bson": "^4.3.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
+    "electron-is-dev": "^1.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
     "form-data": "^2.3.3",
     "joi": "^17.4.0",
@@ -28,16 +25,25 @@
     "lodash": "^4.17.21",
     "luxon": "^1.28.0",
     "mkdirp": "^1.0.4",
+    "object-treeify": "^2.0.1",
     "pluralize": "^7.0.0",
+    "react": "^17.0.2",
+    "react-contexify": "^5.0.0",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
+    "react-scripts": "5.0.0",
+    "react-terminal": "^1.2.1",
     "react-toastify": "^7.0.4",
+    "redux": "^4.1.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "web-vitals": "^2.1.4",
     "yargs": "^16.2.0"
   },
   "scripts": {
@@ -83,16 +89,16 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "concurrently": "^5.2.0",
-    "electron": "^13.1.5",
-    "jest": "^27.0.6",
-    "spectron": "^15.0.0",
     "dotenv-webpack": "^7.0.3",
-    "electron-reload": "^1.5.0",
+    "electron": "^13.1.5",
     "electron-builder": "^22.11.7",
-    "electron-rebuild": "^3.2.7",
     "electron-devtools-installer": "^3.1.1",
+    "electron-rebuild": "^3.2.7",
+    "electron-reload": "^1.5.0",
+    "jest": "^27.0.6",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.7",
+    "spectron": "^15.0.0",
     "tailwindcss": "^3.0.23",
     "wait-on": "^5.1.0"
   },
