--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "object-treeify": "^2.0.1",
     "pluralize": "^7.0.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-contexify": "^5.0.0",
-    "react-dnd": "^15.1.1",
-    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-lazy-load-image-component": "^1.5.1",
