--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pluralize": "^7.0.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-complex-tree": "^1.1.4",
     "react-contexify": "^5.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
