--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-contexify": "^5.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
+    "react-image-gallery": "^1.2.7",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.4",
