--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "jest": "^27.0.6",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.1.3",
     "spectron": "^15.0.0",
     "tailwindcss": "^3.0.23",
     "wait-on": "^5.1.0"
