--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "electron-is-dev": "^1.2.0",
+    "electron-settings": "^4.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
     "form-data": "^2.3.3",
